tests/spec/core_functions/color/rgba/error/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/rgba/error"

mod five_args;

mod four_args;

mod one_arg;

mod three_args;

mod two_args;

mod zero_args;
